--- a/Mixpanel/Notifs/index.html
+++ b/Mixpanel/Notifs/index.html
@@ -31,8 +31,7 @@
 				<a href="#">Inactive</a>
 				<header class="two">
 					<div class="actions">
-						<a href="#" class="move-to">Move to...</a>
-						<a href="#" class="group">
+						<a href="#" class="move-to group">
 							<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 								 viewBox="249 -249 512 512" style="enable-background:new 249 -249 512 512;" xml:space="preserve">
 							<g>
@@ -948,6 +947,7 @@
 					</svg>
 				</span>Misc
 			</p>
+			<a href="#" class="newGroup">Create Group</a>
 		</div>
 		</div>
 	</div>
