added in the temporal notification

--- a/Mixpanel/Notifs/index.html
+++ b/Mixpanel/Notifs/index.html
@@ -952,6 +952,11 @@
 		</div>
 	</div>
 
+	<div class="tempNotif">
+		<p>Moved <b>3 notifications</b> to <b>Folder Name</b></p>
+		<span class="x"></span>
+	</div>
+
 
 </body>
 </html>
