--- a/Mixpanel/CE Style Guide/index.html
+++ b/Mixpanel/CE Style Guide/index.html
@@ -14,7 +14,13 @@
 </head>
 <body>
 
-
+<section class="hero">
+	<div class="logo"></div>
+	<div class="content">
+		<h1 class="text-blue">Chrome UI</h1>
+		<h3 class="text-grey2">Collect Everything</h3>
+	</div>
+</section>
 
 </body>
 </html>
