set up some more styles

--- a/Mixpanel/CE Style Guide/index.html
+++ b/Mixpanel/CE Style Guide/index.html
@@ -17,8 +17,51 @@
 <section class="hero">
 	<div class="logo"></div>
 	<div class="content">
-		<h1 class="text-blue">Chrome UI</h1>
-		<h3 class="text-grey2">Collect Everything</h3>
+		<h1 class="text-blue head">Chrome UI</h1>
+		<h3 class="text-grey2 head">Collect Everything</h3>
+	</div>
+</section>
+
+<section class="one typography">
+	<div class="wrapper cf">
+
+		<div class="headerarea">
+			<h1 class="text-blue head">Typography</h1>
+			<h4 class="text-grey4 head">Usage</h4>
+			<p class="fontSize-m text-grey3 desc">Mixpanel's marketing site and product font scale consists of 6 different sizes. The default font size applied globally to the body is Medium.</p>
+		</div>
+		<div class="col-left">
+			<p class="fontSize-xxl">The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">42px : : class="fontSize-xxl"</span>
+			</p>
+			<p class="fontSize-xl">
+				The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">34px : : class="fontSize-xl"</span>
+			</p>
+			<p class="fontSize-l">
+				The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">26px : : class="fontSize-l"</span>
+			</p>
+			<p class="fontSize-m">
+				The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">16px : : class="fontSize-m"</span>
+			</p>
+			<p class="fontSize-s">
+				The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">14px : : class="fontSize-s"</span>
+			</p>
+			<p class="fontSize-xs">
+				The quick brown fox jumps over the lazy dog.
+				<span class="text-grey3 fontSize-s">11px : : class="fontSize-xs"</span>
+			</p>
+		</div>
+
+		<div class="col-right">
+			<pre>
+				<p class="text-grey4">...</p>
+			</pre>
+		</div>
+
 	</div>
 </section>
 
