did some things

--- a/Mixpanel/CE Style Guide/index.html
+++ b/Mixpanel/CE Style Guide/index.html
@@ -28,10 +28,21 @@
 		<div class="headerarea">
 			<h1 class="text-blue head">Color</h1>
 			<h4 class="text-grey4 head">Usage</h4>
-			<p class="fontSize-m text-grey3 desc">Mixpanel's color palette is fucking awesome.</p>
+			<p class="fontSize-m text-grey2 desc">Mixpanel's color palette is fucking awesome.</p>
 		</div>
-		<div class="col-left">
-
+		<div class="col-left color cf">
+			<p class="fontSize-m text-grey4">Primary Color</p>
+			<div class="flexBlocks">
+				<div class="colorBlock primary bg-primary-blue">
+					<p class="fontSize-m text-white hex">#33B8FF</p>
+					<p class="fontSize-xs text-white name">Primary Blue</p>
+				</div>
+				<div class="colorBlock primary bg-primary-green">
+					<p class="fontSize-m text-white hex">#9DC72A</p>
+					<p class="fontSize-xs text-white name">Primary Green</p>
+				</div>
+				<div class="colorBlock primary bg-primary-yellow"></div>
+			</div>
 		</div>
 
 		<div class="col-right">
@@ -49,31 +60,31 @@
 		<div class="headerarea">
 			<h1 class="text-blue head">Typography</h1>
 			<h4 class="text-grey4 head">Usage</h4>
-			<p class="fontSize-m text-grey3 desc">Mixpanel's marketing site and product font scale consists of 6 different sizes. The default font size applied globally to the body is Medium.</p>
+			<p class="fontSize-m text-grey2 desc">Mixpanel's marketing site and product font scale consists of 6 different sizes. The default font size applied globally to the body is Medium.</p>
 		</div>
 		<div class="col-left">
 			<p class="fontSize-xxl">The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">42px : : class="fontSize-xxl"</span>
+				<span class="text-grey2 fontSize-s">42px : : class="fontSize-xxl"</span>
 			</p>
 			<p class="fontSize-xl">
 				The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">34px : : class="fontSize-xl"</span>
+				<span class="text-grey2 fontSize-s">34px : : class="fontSize-xl"</span>
 			</p>
 			<p class="fontSize-l">
 				The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">26px : : class="fontSize-l"</span>
+				<span class="text-grey2 fontSize-s">26px : : class="fontSize-l"</span>
 			</p>
 			<p class="fontSize-m">
 				The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">16px : : class="fontSize-m"</span>
+				<span class="text-grey2 fontSize-s">16px : : class="fontSize-m"</span>
 			</p>
 			<p class="fontSize-s">
 				The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">14px : : class="fontSize-s"</span>
+				<span class="text-grey2 fontSize-s">14px : : class="fontSize-s"</span>
 			</p>
 			<p class="fontSize-xs">
 				The quick brown fox jumps over the lazy dog.
-				<span class="text-grey3 fontSize-s">11px : : class="fontSize-xs"</span>
+				<span class="text-grey2 fontSize-s">11px : : class="fontSize-xs"</span>
 			</p>
 		</div>
 
