updated the index page with something

--- a/Mixpanel/CE Style Guide/index.html
+++ b/Mixpanel/CE Style Guide/index.html
@@ -58,8 +58,7 @@
 		<div class="headerarea">
 			<h1 class="text-blue head">Typography</h1>
 			<h4 class="text-grey4 head">Usage</h4>
-			<p class="fontSize-m text-grey2 desc">Mixpanel's marketing site and product font scale consists of 6 different sizes. The default font size applied globally to the body is Medium.</p>
-		</div>
+			<p class="fontSize-m text-grey2 desc">Mixpanel's marketing site and product font scale consists of 6 different sizes. The default font size applied globally to the body is Medium.</p 		</div>
 		<div class="col-left">
 			<p class="fontSize-xxl">The quick brown fox jumps over the lazy dog.
 				<span class="text-grey2 fontSize-s">42px : : class="fontSize-xxl"</span>
