new jeopardy game for FieldVision

--- a/Personal/Jeopardy/index.html
+++ b/Personal/Jeopardy/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="assets/css/global.css" type="text/css" media="screen" charset="utf-8" />
 
-	<script src="//use.typekit.net/wws5cng.js"></script>
+	<script src="//use.typekit.net/wws2000cng.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
 
 	<script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script>
@@ -29,54 +29,54 @@
 			<li class="header">Famous Nebraskans</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Geography</li>
+			<li class="header">MOST INSTAGRAMMED PLACES BY STATE</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Wildlife</li>
+			<li class="header">WE LOVE MEL BROOKS</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Jeff</li>
+			<li class="header">IN THE DICTIONARY</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Companies</li>
+			<li class="header">Pop Quiz</li>
 		</div>
 		<div class="col">
-			<li class="header">Misc. Nebraska</li>
+			<li class="header">Technology</li>
 		</div>
 	</ul>
 
 	<div class="col famous">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
 					<p>Warren Buffet, the world’s third wealthiest man hails from this city on the Missouri River, Nebraska’s largest.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
 					<p>This Twitter co-founder and startup guru grew up in a small town 90 miles south of Lincoln, Nebraska’s capital city.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
 					<p>This man was born and raised in Omaha long before becoming 'The Godfather' of film.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
 					<p>From 1974 - 1998 this man coached the Nebraska Cornhuskers to 3 national championships. Afterward, he served as a Nebraska Senator for 2 consecutive terms. </p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
 					<p>Blacklist, the hit show on ABC starring this actor is written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
 					<span>X</span>
@@ -87,37 +87,37 @@
 	<div class="col geography">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
-					<p>This, the longest river in the United States carves out the entire eastern border of Nebraska.</p>
+					<p>In California:<br/>  this theme park</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
-						<p>No other state in the U.S. has more miles of these large bodies of flowing water.</p>
+						<p>In this state: <br/> Lambeau Field</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
-						<p>Six states border Nebraska; Iowa, Missouri, Kansas, Colorado, Wyoming, and this state to the north.</p>
+						<p>In Minnesota: <br/> this shopping mecca</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
-					<p>Located just on the outskirts of town, the aptly named 1733 Estates is 1,733 miles away from these two U.S. cities.</p>
+					<p>In this state: <br/> Pike Place Market</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
-					<p>Named after the vertical channel that conducts smoke through a rooftop, this rock was the most talked about location along the Oregon Trail.</p>
+					<p>In this state: <br/> Red Rocks Park & Amphitheatre</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -126,37 +126,37 @@
 	<div class="col wildlife">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
-					<p>Nebraska's state bug is this winged insect, said to be one of the most important to sustaining life in nature.</p>
+					<p>Mel as this man in "History of the World": "The Lord Jehovah has given unto you these 12000" (Smash!) "Oy. 10! 10 Commandments!"</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
-					<p>Though more frequently found in Siberia, Nebraska is home to the largest fossil ever found of these paleolithic mammoths.</p>
+					<p>Gene Wilder learns the brain donor's name in this film--"Abby Normal", which Gene put "into a 7 1/2' long 20004" wide gorilla!"</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
-					<p>It’s no surprise Alpacas and Llamas are popular ‘livestock’ in Nebraska. More fossils of this water-storing ancestor have been found in Nebraska than anywhere else in the world. </p>
+					<p>Would you believe Mel created this spy sitcom in 1962000? Or that it became a 2008 movie starring Steve Carell? </p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
-						<p>These birds migrate to Nebraska every year on their way south, and are the most watched bird in the United States.</p>
+						<p>Gene Wilder has a warning about Mongo in this film: "Don't do that. If you shoot him, you'll just make him mad"</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
-					<p>Nebraska is considered one of the top three places in the United States to fish for this wildly popular sport species.</p>
+					<p>Mel's scheme to finally close "The Producers" on B'way by casting Larry David failed on this TV show</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -165,37 +165,37 @@
 	<div class="col jeff">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
-					<p>Ballet, ran a marathon, visited Rwanda, played semi-professional soccer.</p>
+					<p>This seat, the title of a Thurber story, is a position of great advantage</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
-					<p>Purple, green, red, orange, blue, and bald.</p>
+					<p>It's the point in the orbit of a planet at which it's nearest to the sun</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
-					<p>Trespassing on a fish hatchery, partying in a private quonset, minor in possession of alcohol.</p>
+					<p>This French phrase refers to a form of psychosis in which 2 people share the same delusions</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
-					<p>Pizza Hut, Papa Johns, Dominos, Little Caesars.</p>
+					<p>This 3-letfer Hindi word is used in India as a title of respect for a man</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
-					Psychology, English, photography.
+					<p>Often seen in crosswords, this 4-letter word for a small decorative case to hold needles is from the Old French</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -204,37 +204,37 @@
 	<div class="col companies">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
-					<p>On August 14th, 2014, the cost per 'A' share of this company hit $200,000.</p>
+					<p>This kids' song mentions a monkey & a mulberry bush.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
-					<p>Oh-Yeah! This fruity	 soft drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<p>John Philips helped organize this N. California festival after the success of iconic jazz festivals held there</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
-					<p>Daniel Hirschfeld, the CEO and Founder of this popular clothing brand started the company in a garage in Kearney where the warehouse and main shipping facilities still reside.</p>
+					<p>For breakfast Post came up with "Country Squares"; Kellogg won that battle with the product still called these</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
-					<p>In 2012 Nebraska ranked No. 1 in the U.S. in beef production, of which this company's mail-order service accounted for nearly 30%.</p>
+					<p>This BBC music show debuted in 1964 playing all the hits for generations of music fans</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
-					<p>Slim Jim, Parkay, Jiffy Pop, Egg Beaters, Healthy Choice and Chef Boyardee are just a few of this Fortune 500 holding company's 100+ brands.</p>
+					<p>In 1930 he left the Boston Symphony to become conductor of the Boston Pops, a job he held for 49 years</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -243,37 +243,37 @@
 	<div class="col misc">
 		<ul class="answers">
 			<li class="amount">
-				<p>1</p>
+				<p>400</p>
 				<figure class="answer">
-					<p>This beloved meat is canned at a warehouse in Fremont, Nebraska.</p>
+					<p>Apple has the App Store; this rival has Play</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>2</p>
+				<p>800</p>
 				<figure class="answer">
-					<p>Oh-Yeah! This sugar-filled fruit drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<p>Metallic ink used in a special T-shirt allows it to display the 4th Amendment when you wear it in this TSA machine</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>3</p>
+				<p>1200</p>
 				<figure class="answer">
-					<p>Though Nebraska produces more of this product than any other state in the US, roughly only 1% of the gross amount harvested is consumed by humans.</p>
+					<p>John Cleese might be delighted to know that the Navy gave its robotic fish prototype this name</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
+				<p>1600</p>
 				<figure class="answer">
-					<p>In 1986, Nebraska became the first state to have a gubernatorial election where both major party candidates were this.</p>
+					<p>These plural units of computer processing power stand for floating-point operations per second</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>5</p>
+				<p>2000</p>
 				<figure class="answer">
-					<p>David Letterman's Top 10 came from the home office in this Nebraska city (also the birthplace of my grandmother).</p>
+					<p>If your new computer game has DLC, go online because it means it has this kind of "content"</p>
 					<span>X</span>
 				</figure>
 			</li>
