new jeopardy game for FieldVision

--- a/Personal/Jeopardy/index.html
+++ b/Personal/Jeopardy/index.html
@@ -78,7 +78,7 @@
 			<li class="amount">
 				<p>2000</p>
 				<figure class="answer">
-					<p>Blacklist, the hit show on ABC starring this actor is written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
+					<p>This ABC show, starring James Spader as "Red" was written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -156,7 +156,7 @@
 			<li class="amount">
 				<p>2000</p>
 				<figure class="answer">
-					<p>Mel's scheme to finally close "The Producers" on B'way by casting Larry David failed on this TV show</p>
+					<p>Mel's scheme to finally close "The Producers" on Broadway by casting Larry David failed on this TV show</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -174,28 +174,28 @@
 			<li class="amount">
 				<p>800</p>
 				<figure class="answer">
-					<p>It's the point in the orbit of a planet at which it's nearest to the sun</p>
+					<p>The OED added the name of this "Winnie-the-Pooh" character to mean any gloomy person</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>1200</p>
 				<figure class="answer">
-					<p>This French phrase refers to a form of psychosis in which 2 people share the same delusions</p>
+					<p>This baseball word for a ball hit directly to the pitcher was recently added to the Oxford English Dictionary</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>1600</p>
 				<figure class="answer">
-					<p>This 3-letfer Hindi word is used in India as a title of respect for a man</p>
+					<p>American Heritage, 1985: "Under the control of a central computer" or "in progress; ongoing"</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>2000</p>
 				<figure class="answer">
-					<p>Often seen in crosswords, this 4-letter word for a small decorative case to hold needles is from the Old French</p>
+					<p>A pangram is a sentence that's special in this way</p>
 					<span>X</span>
 				</figure>
 			</li>
